mas textos a bajas resoluciones

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h4 id="texto" style="font-size: x-large;">Pedro Montero Rodríguez.</h4>
                 <p id="texto">Desarrollador Web FullStack</p>
                 <p> Soy una persona agradable y me suelo llevar bien con todo el mundo por mi facilidad de adaptarme y
-                    socializar, me gusta hacer deporte, salir a tomar algo y ir a la montaña a hacer rutas. </p>
+                    socializar, me gusta hacer deporte, salir a tomar algo e ir a la montaña a hacer rutas. </p>
                 <p id="texto">Aptitudes</p>
                 <p> • Trabajo bien en grupo.
                     <br>
