actualizacion de tecnologias

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div id="contenedoriconos">
-            <a href="archivo/Curriculum PedroMontero.pdf" download><img id="iconos" src="img/cv.png" width="40"></a>
+            <a href="archivo/Curriculum+PedroMontero.pdf" download><img id="iconos" src="img/cv.png" width="40"></a>
             <a href="https://www.linkedin.com/in/pedro-montero-rodriguez-9ab7841ab/" target="_blank"><img id="iconos"
                     src="img/linkdin.png" width="40"></a>
             <a href="https://github.com/Pedromr78" target="_blank"><img id="iconos" src="img/github.png" width="40"></a>
@@ -72,6 +72,24 @@
             <p>Portfolio Personal</p>
             <a href="https://github.com/Pedromr78/Portfolio" target="_blank"><img id="iconos" src="img/github.png"
                     width="40"></a>
+        </div>
+        <div class="col-sm" id="proyectos" style="text-align: center;">
+            <h4>Api Rest Foro</h4>
+            <img class="img-fluid" src="img/apirest.jpg" width="400" id="imgproyectos">
+            <p class="mt-2 mb-0">Api Rest Laravel y Angular</p>
+            <div class="row">
+                <div class="col">
+            <small>Codigo Backend</small>
+            <a href="https://github.com/Pedromr78/ApiRestFull-blogLaravel" target="_blank"><img id="iconos" src="img/github.png"
+                width="40"></a>
+            </div>
+                <div class="col">
+            <small>Codigo Frontend </small>
+            <a href="https://github.com/Pedromr78/SPAblogAngular" target="_blank"><img id="iconos" src="img/github.png"
+                    width="40"></a>
+                </div>
+
+                </div>
         </div>
 
     </div>
@@ -118,6 +136,7 @@
         <div id="contenedorlenguajes">
             <img src="img/laravel.jpg" style="width: 13%;">
             <img src="img/boostrap.jpg">
+            <img src="img/angular.png"  style="width: 11%;">
         </div>
 
         <H4 id="texto1"> Software Y Herramientas </h4>
