cambio curriculum completo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div id="contenedoriconos">
-            <a href="archivo/Curriculum+PedroMontero.pdf" download><img id="iconos" src="img/cv.png" width="40"></a>
+            <a href="archivo/CurriculumPedro.pdf" download><img id="iconos" src="img/cv.png" width="40"></a>
             <a href="https://www.linkedin.com/in/pedro-montero-rodriguez-9ab7841ab/" target="_blank"><img id="iconos"
                     src="img/linkdin.png" width="40"></a>
             <a href="https://github.com/Pedromr78" target="_blank"><img id="iconos" src="img/github.png" width="40"></a>
