Sobre mi mejorado

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <div class="col -sm">
                 <h4 id="texto" style="font-size: x-large;">Pedro Montero Rodríguez.</h4>
                 <p id="texto">Desarrollador Web FullStack</p>
-                <p> Soy una persona agradable y me suelo llevar bien con todo el mundo por mi facilidad de adaptarme y
-                    socializar, me gusta hacer deporte, salir a tomar algo e ir a la montaña a hacer rutas. </p>
+                <p> Me encanta el mundo del desarrollo web, me gusta aprender y ver como avanzan los proyectos a medida que trabajo en ellos.<br>
+                    Mi objetivo es especializarme en el desarrollo web FullStack, estoy buscando una empresa que me dé la oportunidad de empezar, para aprender e ir creciendo como desarrollador.<br>
+                    Soy una persona decidida, responsable y con ganas de trabajar y aprender.
+                    Me gusta hacer deporte, salir a tomar algo y socializar con la gente.
+                     </p>
                 <p id="texto">Aptitudes</p>
                 <p> • Trabajo bien en grupo.
                     <br>
