--- a/index.html
+++ b/index.html
@@ -118,8 +118,12 @@
             <p id="pcertificados" class="col-sm">Horas: 8h.</p>
         </div>
 
-        <H4 id="texto1">INGLES B1/B2</H4>
-        <p id="procesos">En proceso...</p>
+        <H4 id="texto1">INGLES B2</H4>
+        <div id="divcertificados" class="row">
+           
+            <p id="pcertificados" class="col-sm">Aptis British Council</p>
+        </div>
+        
 
     </div>
 
