Actualizacion de titulos del foro

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     width="40"></a>
         </div>
         <div class="col" id="proyectos">
-            <h4>Api Rest Foro Laravel</h4>
+            <h4>Api Rest Blog Laravel</h4>
             <img class="img-fluid" src="img/spa.png" width="400" id="imgproyectos">
             <p class="mt-2">Api Rest Laravel y Angular</p>
             <a href="https://github.com/Pedromr78/ApiRestFull-blog-Laravel-Angular" target="_blank"><img id="iconos" src="img/github.png"
